changes: migrated sheet and types

--- a/src/templates/parts/domine/parts/creatures.hbs
+++ b/src/templates/parts/domine/parts/creatures.hbs
@@ -9,7 +9,7 @@
   {{#> "systems/animabf/templates/parts/common/group-body.hbs"
     class="creatures"
   }}
-    {{#each data.domine.creatures}}
+    {{#each data.data.domine.creatures}}
       <div data-creature-id='{{this._id}}' class='creature-row'>
         {{>
         "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
