--- a/src/templates/parts/domine/parts/ki-accumulation.hbs
+++ b/src/templates/parts/domine/parts/ki-accumulation.hbs
@@ -19,7 +19,7 @@
         class="strength-accumulation accumulation-row-accumulation"
         hideTitle=true
         inputName="data.domine.kiAccumulation.strength.accumulated.value"
-        inputValue=data.domine.kiAccumulation.strength.accumulated.value
+        inputValue=data.data.domine.kiAccumulation.strength.accumulated.value
       }}
 
       {{>
@@ -27,10 +27,10 @@
         class="current-strength-reserve accumulation-row-reserve"
         hideTitle=true
         inputName="data.domine.kiAccumulation.strength.current.value"
-        inputValue=data.domine.kiAccumulation.strength.current.value
+        inputValue=data.data.domine.kiAccumulation.strength.current.value
         hasSecondaryInput=true
         secondaryInputName="data.domine.kiAccumulation.strength.total.value"
-        secondaryInputValue=data.domine.kiAccumulation.strength.total.value
+        secondaryInputValue=data.data.domine.kiAccumulation.strength.total.value
       }}
     </div>
     <div class='accumulation-row'>
@@ -41,7 +41,7 @@
         class="agility-accumulation accumulation-row-accumulation"
         hideTitle=true
         inputName="data.domine.kiAccumulation.agility.accumulated.value"
-        inputValue=data.domine.kiAccumulation.agility.accumulated.value
+        inputValue=data.data.domine.kiAccumulation.agility.accumulated.value
       }}
 
       {{>
@@ -49,10 +49,10 @@
         class="current-agility-reserve accumulation-row-reserve"
         hideTitle=true
         inputName="data.domine.kiAccumulation.agility.current.value"
-        inputValue=data.domine.kiAccumulation.agility.current.value
+        inputValue=data.data.domine.kiAccumulation.agility.current.value
         hasSecondaryInput=true
         secondaryInputName="data.domine.kiAccumulation.agility.total.value"
-        secondaryInputValue=data.domine.kiAccumulation.agility.total.value
+        secondaryInputValue=data.data.domine.kiAccumulation.agility.total.value
       }}
     </div>
     <div class='accumulation-row'>
@@ -63,7 +63,7 @@
         class="dexterity-accumulation accumulation-row-accumulation"
         hideTitle=true
         inputName="data.domine.kiAccumulation.dexterity.accumulated.value"
-        inputValue=data.domine.kiAccumulation.dexterity.accumulated.value
+        inputValue=data.data.domine.kiAccumulation.dexterity.accumulated.value
       }}
 
       {{>
@@ -71,10 +71,10 @@
         class="current-dexterity-reserve accumulation-row-reserve"
         hideTitle=true
         inputName="data.domine.kiAccumulation.dexterity.current.value"
-        inputValue=data.domine.kiAccumulation.dexterity.current.value
+        inputValue=data.data.domine.kiAccumulation.dexterity.current.value
         hasSecondaryInput=true
         secondaryInputName="data.domine.kiAccumulation.dexterity.total.value"
-        secondaryInputValue=data.domine.kiAccumulation.dexterity.total.value
+        secondaryInputValue=data.data.domine.kiAccumulation.dexterity.total.value
       }}
     </div>
     <div class='accumulation-row'>
@@ -85,7 +85,7 @@
         class="constitution-accumulation accumulation-row-accumulation"
         hideTitle=true
         inputName="data.domine.kiAccumulation.constitution.accumulated.value"
-        inputValue=data.domine.kiAccumulation.constitution.accumulated.value
+        inputValue=data.data.domine.kiAccumulation.constitution.accumulated.value
       }}
 
       {{>
@@ -93,10 +93,10 @@
         class="current-constitution-reserve accumulation-row-reserve"
         hideTitle=true
         inputName="data.domine.kiAccumulation.constitution.current.value"
-        inputValue=data.domine.kiAccumulation.constitution.current.value
+        inputValue=data.data.domine.kiAccumulation.constitution.current.value
         hasSecondaryInput=true
         secondaryInputName="data.domine.kiAccumulation.constitution.total.value"
-        secondaryInputValue=data.domine.kiAccumulation.constitution.total.value
+        secondaryInputValue=data.data.domine.kiAccumulation.constitution.total.value
       }}
     </div>
     <div class='accumulation-row'>
@@ -107,7 +107,7 @@
         class="willPower-accumulation accumulation-row-accumulation"
         hideTitle=true
         inputName="data.domine.kiAccumulation.willPower.accumulated.value"
-        inputValue=data.domine.kiAccumulation.willPower.accumulated.value
+        inputValue=data.data.domine.kiAccumulation.willPower.accumulated.value
       }}
 
       {{>
@@ -115,10 +115,10 @@
         class="current-willPower-reserve accumulation-row-reserve"
         hideTitle=true
         inputName="data.domine.kiAccumulation.willPower.current.value"
-        inputValue=data.domine.kiAccumulation.willPower.current.value
+        inputValue=data.data.domine.kiAccumulation.willPower.current.value
         hasSecondaryInput=true
         secondaryInputName="data.domine.kiAccumulation.willPower.total.value"
-        secondaryInputValue=data.domine.kiAccumulation.willPower.total.value
+        secondaryInputValue=data.data.domine.kiAccumulation.willPower.total.value
       }}
     </div>
     <div class='accumulation-row'>
@@ -129,7 +129,7 @@
         class="power-accumulation accumulation-row-accumulation"
         hideTitle=true
         inputName="data.domine.kiAccumulation.power.accumulated.value"
-        inputValue=data.domine.kiAccumulation.power.accumulated.value
+        inputValue=data.data.domine.kiAccumulation.power.accumulated.value
       }}
 
       {{>
@@ -137,10 +137,10 @@
         class="current-power-reserve accumulation-row-reserve"
         hideTitle=true
         inputName="data.domine.kiAccumulation.power.current.value"
-        inputValue=data.domine.kiAccumulation.power.current.value
+        inputValue=data.data.domine.kiAccumulation.power.current.value
         hasSecondaryInput=true
         secondaryInputName="data.domine.kiAccumulation.power.total.value"
-        secondaryInputValue=data.domine.kiAccumulation.power.total.value
+        secondaryInputValue=data.data.domine.kiAccumulation.power.total.value
       }}
     </div>
     <div class='accumulation-row generic-accumulation-row'>
@@ -151,10 +151,10 @@
         class="current-generic-reserve accumulation-row-reserve"
         hideTitle=true
         inputName="data.domine.kiAccumulation.generic.current.value"
-        inputValue=data.domine.kiAccumulation.generic.current.value
+        inputValue=data.data.domine.kiAccumulation.generic.current.value
         hasSecondaryInput=true
         secondaryInputName="data.domine.kiAccumulation.generic.total.value"
-        secondaryInputValue=data.domine.kiAccumulation.generic.total.value
+        secondaryInputValue=data.data.domine.kiAccumulation.generic.total.value
       }}
     </div>
   {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
