--- a/src/templates/parts/domine/parts/martial-arts.hbs
+++ b/src/templates/parts/domine/parts/martial-arts.hbs
@@ -9,7 +9,7 @@
   {{#> "systems/animabf/templates/parts/common/group-body.hbs"
     class="martial-arts"
   }}
-    {{#each data.domine.martialArts}}
+    {{#each data.data.domine.martialArts}}
       <div data-martial-art-id='{{this._id}}' class='martial-art-row'>
         {{>
         "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
