--- a/src/templates/parts/domine/parts/seals.hbs
+++ b/src/templates/parts/domine/parts/seals.hbs
@@ -21,7 +21,7 @@
         hideTitle=true
         inputType="checkbox"
         inputName="data.domine.seals.minor.earth.isActive.value"
-        inputValue=data.domine.seals.minor.earth.isActive.value
+        inputValue=data.data.domine.seals.minor.earth.isActive.value
       }}
 
       {{>
@@ -30,7 +30,7 @@
         hideTitle=true
         inputType="checkbox"
         inputName="data.domine.seals.major.earth.isActive.value"
-        inputValue=data.domine.seals.major.earth.isActive.value
+        inputValue=data.data.domine.seals.major.earth.isActive.value
       }}
     </div>
     <div class='seal-row'>
@@ -42,7 +42,7 @@
         hideTitle=true
         inputType="checkbox"
         inputName="data.domine.seals.minor.metal.isActive.value"
-        inputValue=data.domine.seals.minor.metal.isActive.value
+        inputValue=data.data.domine.seals.minor.metal.isActive.value
       }}
 
       {{>
@@ -51,7 +51,7 @@
         hideTitle=true
         inputType="checkbox"
         inputName="data.domine.seals.major.metal.isActive.value"
-        inputValue=data.domine.seals.major.metal.isActive.value
+        inputValue=data.data.domine.seals.major.metal.isActive.value
       }}
     </div>
     <div class='seal-row'>
@@ -63,7 +63,7 @@
         hideTitle=true
         inputType="checkbox"
         inputName="data.domine.seals.minor.wind.isActive.value"
-        inputValue=data.domine.seals.minor.wind.isActive.value
+        inputValue=data.data.domine.seals.minor.wind.isActive.value
       }}
 
       {{>
@@ -72,7 +72,7 @@
         hideTitle=true
         inputType="checkbox"
         inputName="data.domine.seals.major.wind.isActive.value"
-        inputValue=data.domine.seals.major.wind.isActive.value
+        inputValue=data.data.domine.seals.major.wind.isActive.value
       }}
     </div>
     <div class='seal-row'>
@@ -84,7 +84,7 @@
         hideTitle=true
         inputType="checkbox"
         inputName="data.domine.seals.minor.water.isActive.value"
-        inputValue=data.domine.seals.minor.water.isActive.value
+        inputValue=data.data.domine.seals.minor.water.isActive.value
       }}
 
       {{>
@@ -93,7 +93,7 @@
         hideTitle=true
         inputType="checkbox"
         inputName="data.domine.seals.major.water.isActive.value"
-        inputValue=data.domine.seals.major.water.isActive.value
+        inputValue=data.data.domine.seals.major.water.isActive.value
       }}
     </div>
     <div class='seal-row'>
@@ -105,7 +105,7 @@
         hideTitle=true
         inputType="checkbox"
         inputName="data.domine.seals.minor.wood.isActive.value"
-        inputValue=data.domine.seals.minor.wood.isActive.value
+        inputValue=data.data.domine.seals.minor.wood.isActive.value
       }}
 
       {{>
@@ -114,7 +114,7 @@
         hideTitle=true
         inputType="checkbox"
         inputName="data.domine.seals.major.wood.isActive.value"
-        inputValue=data.domine.seals.major.wood.isActive.value
+        inputValue=data.data.domine.seals.major.wood.isActive.value
       }}
     </div>
   {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
