--- a/src/templates/parts/general/parts/aspect.hbs
+++ b/src/templates/parts/general/parts/aspect.hbs
@@ -9,7 +9,7 @@
         name='data.general.aspect.hair.value'
         type='text'
         class='input'
-        value='{{data.general.aspect.hair.value}}'
+        value='{{data.data.general.aspect.hair.value}}'
       />
     </div>
     <div class='eyes flex'>
@@ -18,7 +18,7 @@
         name='data.general.aspect.eyes.value'
         type='text'
         class='input'
-        value='{{data.general.aspect.eyes.value}}'
+        value='{{data.data.general.aspect.eyes.value}}'
       />
     </div>
     <div class='height flex mr-1'>
@@ -27,7 +27,7 @@
         name='data.general.aspect.height.value'
         type='text'
         class='input'
-        value='{{data.general.aspect.height.value}}'
+        value='{{data.data.general.aspect.height.value}}'
       />
     </div>
     <div class='weight flex'>
@@ -36,7 +36,7 @@
         name='data.general.aspect.weight.value'
         type='text'
         class='input'
-        value='{{data.general.aspect.weight.value}}'
+        value='{{data.data.general.aspect.weight.value}}'
       />
     </div>
     <div class='age flex mr-1'>
@@ -45,7 +45,7 @@
         name='data.general.aspect.age.value'
         type='text'
         class='input'
-        value='{{data.general.aspect.age.value}}'
+        value='{{data.data.general.aspect.age.value}}'
       />
     </div>
     <div class='genre flex'>
@@ -54,7 +54,7 @@
         name='data.general.aspect.genre.value'
         type='text'
         class='input'
-        value='{{data.general.aspect.genre.value}}'
+        value='{{data.data.general.aspect.genre.value}}'
       />
     </div>
     <div class='race flex mr-1'>
@@ -63,7 +63,7 @@
         name='data.general.aspect.race.value'
         type='text'
         class='input'
-        value='{{data.general.aspect.race.value}}'
+        value='{{data.data.general.aspect.race.value}}'
       />
     </div>
     <div class='appearance flex'>
@@ -72,7 +72,7 @@
         name='data.general.aspect.appearance.value'
         type='text'
         class='input'
-        value='{{data.general.aspect.appearance.value}}'
+        value='{{data.data.general.aspect.appearance.value}}'
       />
     </div>
     <div class='size flex'>
@@ -81,7 +81,7 @@
         name='data.general.aspect.size.value'
         type='text'
         class='input'
-        value='{{data.general.aspect.size.value}}'
+        value='{{data.data.general.aspect.size.value}}'
       />
     </div>
   </div>
