--- a/src/templates/parts/general/parts/disadvantages.hbs
+++ b/src/templates/parts/general/parts/disadvantages.hbs
@@ -8,7 +8,7 @@
     <h3 class='group-header-title'>{{localize 'anima.ui.disadvantageSection.title'}}</h3>
   </div>
   <div id='disadvantage-context-menu-container' class='group-body'>
-    {{#each data.general.disadvantages}}
+    {{#each data.data.general.disadvantages}}
       <div data-disadvantage-id='{{this._id}}' class='disadvantage-row'>
         <input
           name='data.dynamic.disadvantages.{{this._id}}.name'
