--- a/src/templates/parts/general/parts/language.hbs
+++ b/src/templates/parts/general/parts/language.hbs
@@ -15,10 +15,10 @@
         name='data.general.languages.base.value'
         type='text'
         class='input'
-        value='{{data.general.languages.base.value}}'
+        value='{{data.data.general.languages.base.value}}'
       />
     </div>
-    {{#each data.general.languages.others}}
+    {{#each data.data.general.languages.others}}
       <div data-language-id='{{this._id}}' class='language-row'>
         <input
           name='data.dynamic.other_languages.{{this._id}}.name'
