--- a/src/templates/parts/header/parts/primary-characteristics.hbs
+++ b/src/templates/parts/header/parts/primary-characteristics.hbs
@@ -4,7 +4,7 @@
   {{#> "systems/animabf/templates/parts/common/group-body.hbs"
     class="characteristics"
   }}
-    {{#each data.characteristics.primaries as |char key|}}
+    {{#each data.data.characteristics.primaries as |char key|}}
       {{>
         "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
         class="characteristic"
