--- a/src/templates/parts/header/parts/resistances.hbs
+++ b/src/templates/parts/header/parts/resistances.hbs
@@ -8,7 +8,7 @@
   {{#> "systems/animabf/templates/parts/common/group-body.hbs"
     class="resistances"
   }}
-    {{#each data.characteristics.secondaries.resistances as |atr key|}}
+    {{#each data.data.characteristics.secondaries.resistances as |atr key|}}
       {{>
       "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
         class="resistance"
