--- a/src/templates/parts/mystic/parts/metamagics.hbs
+++ b/src/templates/parts/mystic/parts/metamagics.hbs
@@ -9,7 +9,7 @@
   {{#> "systems/animabf/templates/parts/common/group-body.hbs"
     class="metamagics"
   }}
-    {{#each data.mystic.metamagics}}
+    {{#each data.data.mystic.metamagics}}
       <div data-metamagic-id='{{this._id}}' class='metamagic-row'>
         {{>
         "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
