--- a/src/templates/parts/mystic/parts/summoning.hbs
+++ b/src/templates/parts/mystic/parts/summoning.hbs
@@ -16,7 +16,7 @@
           title=(localize "anima.ui.mystic.summoning.summon.title")
           rollable=true
           inputName="data.mystic.summoning.summon.value"
-          inputValue=data.mystic.summoning.summon.value
+          inputValue=data.data.mystic.summoning.summon.value
         }}
         {{>
         "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
@@ -24,7 +24,7 @@
           title=(localize "anima.ui.mystic.summoning.bind.title")
           rollable=true
           inputName="data.mystic.summoning.bind.value"
-          inputValue=data.mystic.summoning.bind.value
+          inputValue=data.data.mystic.summoning.bind.value
         }}
       </div>
       <div>
@@ -34,7 +34,7 @@
           title=(localize "anima.ui.mystic.summoning.control.title")
           rollable=true
           inputName="data.mystic.summoning.control.value"
-          inputValue=data.mystic.summoning.control.value
+          inputValue=data.data.mystic.summoning.control.value
         }}
         {{>
         "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
@@ -42,7 +42,7 @@
           title=(localize "anima.ui.mystic.summoning.banish.title")
           rollable=true
           inputName="data.mystic.summoning.banish.value"
-          inputValue=data.mystic.summoning.banish.value
+          inputValue=data.data.mystic.summoning.banish.value
         }}
       </div>
     </div>
