--- a/src/templates/parts/psychic/parts/psychic-points.hbs
+++ b/src/templates/parts/psychic/parts/psychic-points.hbs
@@ -13,10 +13,10 @@
       class="power"
       title=(localize "anima.ui.psychic.psychicPoints.power.title")
       inputName="data.psychic.psychicPoints.used.value"
-      inputValue=data.psychic.psychicPoints.used.value
+      inputValue=data.data.psychic.psychicPoints.used.value
       hasSecondaryInput=true
       secondaryInputName="data.psychic.psychicPoints.max.value"
-      secondaryInputValue=data.psychic.psychicPoints.max.value
+      secondaryInputValue=data.data.psychic.psychicPoints.max.value
     }}
   {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
 {{/"systems/animabf/templates/parts/common/group.hbs"}}
