--- a/src/templates/parts/psychic/parts/psychic-potential.hbs
+++ b/src/templates/parts/psychic/parts/psychic-potential.hbs
@@ -13,7 +13,7 @@
       class="potential"
       title=(localize "anima.ui.psychic.psychicPotential.potential.title")
       inputName="data.psychic.psychicPotential.value"
-      inputValue=data.psychic.psychicPotential.value
+      inputValue=data.data.psychic.psychicPotential.value
     }}
   {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
 {{/"systems/animabf/templates/parts/common/group.hbs"}}
