--- a/src/templates/parts/psychic/parts/psychic-projection.hbs
+++ b/src/templates/parts/psychic/parts/psychic-projection.hbs
@@ -15,7 +15,7 @@
       rollable=true
       rollableMessage=(manipulateString "toLowerCase" (localize "anima.ui.psychic.psychicProjection.title"))
       inputName="data.psychic.psychicProjection.value"
-      inputValue=data.psychic.psychicProjection.value
+      inputValue=data.data.psychic.psychicProjection.value
     }}
   {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
 {{/"systems/animabf/templates/parts/common/group.hbs"}}
