--- a/src/templates/parts/domine/parts/ars-magnus.hbs
+++ b/src/templates/parts/domine/parts/ars-magnus.hbs
@@ -9,7 +9,7 @@
   {{#> "systems/animabf/templates/parts/common/group-body.hbs"
     class="ars-magnus"
   }}
-    {{#each data.domine.arsMagnus}}
+    {{#each data.data.domine.arsMagnus}}
       <div data-ars-magnus-id='{{this._id}}' class='ars-magnus-row'>
         <input
           name='data.dynamic.arsMagnus.{{this._id}}.name'
