--- a/src/templates/parts/domine/parts/martial-knowledge.hbs
+++ b/src/templates/parts/domine/parts/martial-knowledge.hbs
@@ -13,10 +13,10 @@
       class="knowledge"
       title=(localize "anima.ui.domine.martialKnowledge.mk.title")
       inputName="data.domine.martialKnowledge.used.value"
-      inputValue=data.domine.martialKnowledge.used.value
+      inputValue=data.data.domine.martialKnowledge.used.value
       hasSecondaryInput=true
       secondaryInputName="data.domine.martialKnowledge.max.value"
-      secondaryInputValue=data.domine.martialKnowledge.max.value
+      secondaryInputValue=data.data.domine.martialKnowledge.max.value
     }}
   {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
 {{/"systems/animabf/templates/parts/common/group.hbs"}}
