--- a/src/templates/parts/domine/parts/nemesis-skills.hbs
+++ b/src/templates/parts/domine/parts/nemesis-skills.hbs
@@ -9,7 +9,7 @@
   {{#> "systems/animabf/templates/parts/common/group-body.hbs"
     class="nemesis-skills"
   }}
-    {{#each data.domine.nemesisSkills}}
+    {{#each data.data.domine.nemesisSkills}}
       <div data-nemesis-skill-id='{{this._id}}' class='nemesis-skill-row'>
         <input
           name='data.dynamic.nemesisSkills.{{this._id}}.name'
