--- a/src/templates/parts/general/parts/elan.hbs
+++ b/src/templates/parts/general/parts/elan.hbs
@@ -8,7 +8,7 @@
     <h3 class='group-header-title'>{{localize 'anima.ui.elanSection.title'}}</h3>
   </div>
   <div id='elan-context-menu-container' class='group-body'>
-    {{#each data.general.elan as |elan|}}
+    {{#each data.data.general.elan as |elan|}}
       <div class='elan-row'>
         <div data-elan-id='{{elan._id}}' class='base flex'>
           <p
