--- a/src/templates/parts/general/parts/level.hbs
+++ b/src/templates/parts/general/parts/level.hbs
@@ -9,7 +9,7 @@
     <input type='number' class='input' />
   </div>
   <div id='level-context-menu-container' class='group-body'>
-    {{#each data.general.levels}}
+    {{#each data.data.general.levels}}
       <div data-level-id='{{this._id}}' class='level-row flex'>
         <input
           name='data.dynamic.levels.{{this._id}}.name'
