--- a/src/templates/parts/general/parts/notes.hbs
+++ b/src/templates/parts/general/parts/notes.hbs
@@ -8,7 +8,7 @@
     <h3 class='group-header-title'>{{localize 'anima.ui.notesSection.title'}}</h3>
   </div>
   <div id='note-context-menu-container' class='group-body'>
-    {{#each data.general.notes}}
+    {{#each data.data.general.notes}}
       <div data-note-id='{{this._id}}' class='note-row'>
         <input
           name='data.dynamic.notes.{{this._id}}.name'
