--- a/src/templates/parts/header/parts/armor.hbs
+++ b/src/templates/parts/header/parts/armor.hbs
@@ -14,7 +14,7 @@
       title=(localize "anima.ui.armor.name.title")
       inputType="text"
       inputName=(concat "data.combat.armor.name.value")
-      inputValue=data.combat.armor.name.value
+      inputValue=data.data.combat.armor.name.value
     }}
     <div class='at'>
       {{>
@@ -22,49 +22,49 @@
         class="cut"
         title=(localize "anima.ui.armor.at.cut.title")
         inputName=(concat "data.combat.armor.at.cut.value")
-        inputValue=data.combat.armor.at.cut.value
+        inputValue=data.data.combat.armor.at.cut.value
       }}
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="impact"
         title=(localize "anima.ui.armor.at.impact.title")
         inputName=(concat "data.combat.armor.at.impact.value")
-        inputValue=data.combat.armor.at.impact.value
+        inputValue=data.data.combat.armor.at.impact.value
       }}
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="thrust"
         title=(localize "anima.ui.armor.at.thrust.title")
         inputName=(concat "data.combat.armor.at.thrust.value")
-        inputValue=data.combat.armor.at.thrust.value
+        inputValue=data.data.combat.armor.at.thrust.value
       }}
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="heat"
         title=(localize "anima.ui.armor.at.heat.title")
         inputName=(concat "data.combat.armor.at.heat.value")
-        inputValue=data.combat.armor.at.heat.value
+        inputValue=data.data.combat.armor.at.heat.value
       }}
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="electric"
         title=(localize "anima.ui.armor.at.electricity.title")
         inputName=(concat "data.combat.armor.at.electricity.value")
-        inputValue=data.combat.armor.at.electricity.value
+        inputValue=data.data.combat.armor.at.electricity.value
       }}
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="cold"
         title=(localize "anima.ui.armor.at.cold.title")
         inputName=(concat "data.combat.armor.at.cold.value")
-        inputValue=data.combat.armor.at.cold.value
+        inputValue=data.data.combat.armor.at.cold.value
       }}
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="energy"
         title=(localize "anima.ui.armor.at.energy.title")
         inputName=(concat "data.combat.armor.at.energy.value")
-        inputValue=data.combat.armor.at.energy.value
+        inputValue=data.data.combat.armor.at.energy.value
       }}
     </div>
   {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
