--- a/src/templates/parts/header/parts/modifiers.hbs
+++ b/src/templates/parts/header/parts/modifiers.hbs
@@ -13,14 +13,14 @@
       class="physical"
       title=(localize "anima.ui.general.modifiers.physicalActions.title")
       inputName="data.general.modifiers.physicalActions.value"
-      inputValue=data.general.modifiers.physicalActions.value
+      inputValue=data.data.general.modifiers.physicalActions.value
     }}
     {{>
     "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
       class="all-actions"
       title=(localize "anima.ui.general.modifiers.allActions.title")
       inputName="data.general.modifiers.allActions.value"
-      inputValue=data.general.modifiers.allActions.value
+      inputValue=data.data.general.modifiers.allActions.value
     }}
   {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
 {{/"systems/animabf/templates/parts/common/group.hbs"}}
