--- a/src/templates/parts/mystic/parts/innate-magic.hbs
+++ b/src/templates/parts/mystic/parts/innate-magic.hbs
@@ -13,14 +13,14 @@
       class="main"
       title=(localize "anima.ui.mystic.innateMagic.main.title")
       inputName="data.mystic.innateMagic.main.value"
-      inputValue=data.mystic.innateMagic.main.value
+      inputValue=data.data.mystic.innateMagic.main.value
     }}
     {{>
     "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
       class="alternative"
       title=(localize "anima.ui.mystic.innateMagic.alternative.title")
       inputName="data.mystic.innateMagic.alternative.value"
-      inputValue=data.mystic.innateMagic.alternative.value
+      inputValue=data.data.mystic.innateMagic.alternative.value
     }}
   {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
 {{/"systems/animabf/templates/parts/common/group.hbs"}}
