--- a/src/templates/parts/mystic/parts/magic-projection.hbs
+++ b/src/templates/parts/mystic/parts/magic-projection.hbs
@@ -15,7 +15,7 @@
       rollable=true
       rollableMessage=(localize "anima.ui.mystic.magicProjection.final.rollMessage")
       inputName="data.mystic.magicProjection.final.value"
-      inputValue=data.mystic.magicProjection.final.value
+      inputValue=data.data.mystic.magicProjection.final.value
     }}
     <h3 class='title'>{{localize "anima.ui.mystic.magicProjection.imbalance.title"}}</h3>
     <div class='imbalance'>
@@ -26,7 +26,7 @@
         rollable=true
         rollableMessage=(localize "anima.ui.mystic.magicProjection.offensive.rollMessage")
         inputName="data.mystic.magicProjection.imbalance.offensive.value"
-        inputValue=data.mystic.magicProjection.imbalance.offensive.value
+        inputValue=data.data.mystic.magicProjection.imbalance.offensive.value
       }}
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
@@ -35,7 +35,7 @@
         rollable=true
         rollableMessage=(localize "anima.ui.mystic.magicProjection.defensive.rollMessage")
         inputName="data.mystic.magicProjection.imbalance.defensive.value"
-        inputValue=data.mystic.magicProjection.imbalance.defensive.value
+        inputValue=data.data.mystic.magicProjection.imbalance.defensive.value
       }}
     </div>
   {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
