--- a/src/templates/parts/mystic/parts/zeon-regeneration.hbs
+++ b/src/templates/parts/mystic/parts/zeon-regeneration.hbs
@@ -13,10 +13,10 @@
       class="final"
       title=(localize "anima.ui.mystic.zeonRegeneration.final.title")
       inputName="data.mystic.zeonRegeneration.current.value"
-      inputValue=data.mystic.zeonRegeneration.current.value
+      inputValue=data.data.mystic.zeonRegeneration.current.value
       hasSecondaryInput=true
       secondaryInputName="data.mystic.zeonRegeneration.max.value"
-      secondaryInputValue=data.mystic.zeonRegeneration.max.value
+      secondaryInputValue=data.data.mystic.zeonRegeneration.max.value
     }}
   {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
 {{/"systems/animabf/templates/parts/common/group.hbs"}}
