--- a/src/templates/parts/psychic/parts/psychic-disciplines.hbs
+++ b/src/templates/parts/psychic/parts/psychic-disciplines.hbs
@@ -9,7 +9,7 @@
   {{#> "systems/animabf/templates/parts/common/group-body.hbs"
     class="psychic-disciplines"
   }}
-    {{#each data.psychic.psychicDisciplines}}
+    {{#each data.data.psychic.psychicDisciplines}}
       <div data-psychic-discipline-id='{{this._id}}' class='psychic-discipline-row'>
         <input
           name='data.dynamic.psychicDisciplines.{{this._id}}.name'
