--- a/src/templates/parts/secondaries.html
+++ b/src/templates/parts/secondaries.html
@@ -3,7 +3,7 @@
 
     <div class="athletics group">
         <h3 class="text text-box">{{localize "anima.athleticAbilities"}}</h3>
-        {{#each data.secondaries.athletics as |atr key|}}
+        {{#each data.data.secondaries.athletics as |atr key|}}
         <div>
             <label for="data.secondaries.athletics.{{key}}.value" class="rollable"
                 data-roll="1d100xa+@secondaries.athletics.{{key}}.value" data-label="{{key}}">
@@ -18,7 +18,7 @@
 
     <div class="social group">
         <h3 class="text text-box">{{localize "anima.socialAbilities"}}</h3>
-        {{#each data.secondaries.social as |atr key|}}
+        {{#each data.data.secondaries.social as |atr key|}}
         <div>
             <label for="data.secondaries.social.{{key}}.value" class="rollable"
                 data-roll="1d100xa+@secondaries.social.{{key}}.value" data-label="{{key}}">
@@ -33,7 +33,7 @@
 
     <div class="perception group">
         <h3 class="text text-box">{{localize "anima.perceptionAbilities"}}</h3>
-        {{#each data.secondaries.perception as |atr key|}}
+        {{#each data.data.secondaries.perception as |atr key|}}
         <div>
             <label for="data.secondaries.perception.{{key}}.value" class="rollable"
                 data-roll="1d100xa+@secondaries.perception.{{key}}.value" data-label="{{key}}">
@@ -48,7 +48,7 @@
 
     <div class="vigor group">
         <h3 class="text text-box">{{localize "anima.vigorAbilities"}}</h3>
-        {{#each data.secondaries.vigor as |atr key|}}
+        {{#each data.data.secondaries.vigor as |atr key|}}
         <div>
             <label for="data.secondaries.vigor.{{key}}.value" class="rollable"
                 data-roll="1d100xa+@secondaries.vigor.{{key}}.value" data-label="{{key}}">
@@ -63,7 +63,7 @@
 
     <div class="intellectual group">
         <h3 class="text text-box">{{localize "anima.intellectualAbilities"}}</h3>
-        {{#each data.secondaries.intellectual as |atr key|}}
+        {{#each data.data.secondaries.intellectual as |atr key|}}
         <div>
             <label for="data.secondaries.intellectual.{{key}}.value" class="rollable"
                 data-roll="1d100xa+@secondaries.intellectual.{{key}}.value" data-label="{{key}}">
@@ -78,7 +78,7 @@
 
     <div class="subterfuge group">
         <h3 class="text text-box">{{localize "anima.subterfugeAbilities"}}</h3>
-        {{#each data.secondaries.subterfuge as |atr key|}}
+        {{#each data.data.secondaries.subterfuge as |atr key|}}
         <div>
             <label for="data.secondaries.subterfuge.{{key}}.value" class="rollable"
                 data-roll="1d100xa+@secondaries.subterfuge.{{key}}.value" data-label="{{key}}">
@@ -93,7 +93,7 @@
 
     <div class="creative group">
         <h3 class="text text-box">{{localize "anima.creativeAbilities"}}</h3>
-        {{#each data.secondaries.creative as |atr key|}}
+        {{#each data.data.secondaries.creative as |atr key|}}
         <div>
             <label for="data.secondaries.creative.{{key}}.value" class="rollable"
                 data-roll="1d100xa+@secondaries.creative.{{key}}.value" data-label="{{key}}">
@@ -112,13 +112,13 @@
             <a data-type="skill" data-on-click='add-secondary-skill' class="skillcreate"><img src="\systems\animabf\assets\images\boton-plus.png"></a>
         </div>
 
-        {{#each data.skill as |skill|}}
+        {{#each data.data.secondaries.others as |skill|}}
         <div class="skill-item item">
-            <label class="rollable" name='data.skill.{{skill._id}}.name'
-                data-roll="1d100xa+{{skill.data.value}}">
+            <label class="rollable" name='data.secondaries.others.{{skill._id}}.name'
+                data-roll="1d100xa+{{skill.data.level.value}}">
                 {{skill.name}}
             </label>
-            <input type="number" class="input_value" name='data.dynamic.skill.{{skill._id}}.data.value' value="{{skill.data.value}}" />
+            <input type="number" class="input_value" name='data.dynamic.skill.{{skill._id}}.data.level.value' value="{{skill.data.level.value}}" />
             <a class="skill-controls"><i data-item-id='{{skill._id}}' data-on-click='delete-item' class="fas fa-trash skilldelete"></i></a>
         </div>
         {{/each}}
