fix: some issues after migrate to 0.8.8 version on html combat tab

--- a/src/templates/parts/combat/parts/base-values.hbs
+++ b/src/templates/parts/combat/parts/base-values.hbs
@@ -13,21 +13,21 @@
       class="attack"
       title=(localize "anima.ui.combat.baseValues.attack.title")
       inputName="data.combat.attack.value"
-      inputValue=data.combat.attack.value
+      inputValue=data.data.combat.attack.value
     }}
     {{>
     "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
       class="block"
       title=(localize "anima.ui.combat.baseValues.block.title")
       inputName="data.combat.block.value"
-      inputValue=data.combat.block.value
+      inputValue=data.data.combat.block.value
     }}
     {{>
     "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
       class="dodge"
       title=(localize "anima.ui.combat.baseValues.dodge.title")
       inputName="data.combat.dodge.value"
-      inputValue=data.combat.dodge.value
+      inputValue=data.data.combat.dodge.value
     }}
   {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
 {{/"systems/animabf/templates/parts/common/group.hbs"}}
