--- a/src/templates/parts/combat/parts/combat-special-skills.hbs
+++ b/src/templates/parts/combat/parts/combat-special-skills.hbs
@@ -9,8 +9,8 @@
   {{#> "systems/animabf/templates/parts/common/group-body.hbs"
     class="combat-special-skill"
   }}
-  {{log data.combat}}
-    {{#each data.combat.combatSpecialSkills}}
+    {{log data.data.combat.combatSpecialSkills}}
+    {{#each data.data.combat.combatSpecialSkills}}
       <div data-combat-special-skill-id='{{this._id}}' class='combat-special-skill-row'>
         <input
           name='data.dynamic.combatSpecialSkills.{{this._id}}.name'
