fix: minor fixes on translations and styles

--- a/src/scss/combat.scss
+++ b/src/scss/combat.scss
@@ -1,6 +1,8 @@
 @import 'variable.scss';
 
 .combat {
+  margin-top: 0.75rem;
+
   .first-row {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
