--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -140,7 +140,7 @@
       }
 
       .add-button {
-        width: auto;
+        width: 1.5rem;
         height: 1.5rem;
         border-radius: 50%;
 
