--- a/src/templates/parts/general/parts/description.hbs
+++ b/src/templates/parts/general/parts/description.hbs
@@ -3,9 +3,13 @@
     <h3 class='group-header-title'>{{localize 'anima.ui.descriptionSection.title'}}</h3>
   </div>
   <div class='group-body'>
-    <textarea
+    <input
       name='data.general.description.value'
       class='input'
-    >{{data.general.description.value}}</textarea>
+      value='{{data.data.general.description.value}}'
+    />
+    <p class='result'>
+      {{data.data.general.description.value}}
+    </p>
   </div>
 </div>
